# python-basic-otus

./: Dockerfile  README.md  pyproject.toml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  requirements.txt
